knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__CRUSH_Settings_Obj__c/fields/pqcrush__Account_Plan_Transfer__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Account_Plan_Transfer__c</fullName>
    <label>Account Plan Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEAM_MEMBER</fullName>
                <label>Assign to oldest team member</label>
            </value>
            <value>
                <fullName>USER</fullName>
                <label>Assign to specific user</label>
            </value>
            <value>
                <fullName>NONE</fullName>
                <default>true</default>
                <label>Do nothing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>