knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__CRUSH_Settings_Obj__c/fields/pqcrush__Allow_Add_Tasks_From_Objective_Component__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Allow_Add_Tasks_From_Objective_Component__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to allow users to add tasks from the Objective Component</description>
    <inlineHelpText>Check this box to allow users to add tasks from the Objective Component</inlineHelpText>
    <label>Allow Add Tasks From Objective Component</label>
    <type>Checkbox</type>
</CustomField>