knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__CRUSH_Settings_Obj__c/fields/pqcrush__Auto_Create_Relationship_Maps__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Auto_Create_Relationship_Maps__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked will allow the system to auto create a map if one isn&apos;t found (and user has permissions) when accessing the Relationship Map component</description>
    <label>Auto Create Relationship Maps</label>
    <type>Checkbox</type>
</CustomField>