knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__CRUSH_Settings_Obj__c/fields/pqcrush__Can_Create_Objects_In_Cross_Sell__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Can_Create_Objects_In_Cross_Sell__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Toggle this to true to give users the option to create new objects in the Cross-Sell map</description>
    <inlineHelpText>Toggle this to true to give users the option to create new objects in the Cross-Sell map</inlineHelpText>
    <label>Can Create Objects In Cross-Sell</label>
    <type>Checkbox</type>
</CustomField>