knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__CRUSH_Settings_Obj__c/fields/pqcrush__Disabled_Objective_Sort_Button__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Disabled_Objective_Sort_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to disable Objective Component Sort Button</description>
    <inlineHelpText>Check this box to disable Objective Component Sort Button</inlineHelpText>
    <label>Diable Objective Component Sort Button</label>
    <type>Checkbox</type>
</CustomField>