knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__CRUSH_Settings_Obj__c/fields/pqcrush__Enable_Notifications__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Enable_Notifications__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Notifications</label>
    <type>Checkbox</type>
</CustomField>