knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__CRUSH_Settings_Obj__c/fields/pqcrush__Enable_Objective_Stage_Based_On_Tasks__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Enable_Objective_Stage_Based_On_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to enable objective stage based on tasks</description>
    <inlineHelpText>Check this box to enable objective stage based on tasks</inlineHelpText>
    <label>Enable objective stage based on tasks</label>
    <type>Checkbox</type>
</CustomField>