knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__CRUSH_Settings_Obj__c/fields/pqcrush__Objective_Low_Middle_Boundary__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Objective_Low_Middle_Boundary__c</fullName>
    <description>The boundary between low &amp; middle.  Anything below this value is considered low.</description>
    <inlineHelpText>The boundary between low &amp; middle.  Anything below this value is considered low.</inlineHelpText>
    <label>Objective Low Middle Boundary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>