knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__CRUSH_Settings_Obj__c/fields/pqcrush__Opportunities_Added__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Opportunities_Added__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Opportunities Added</label>
    <type>Checkbox</type>
</CustomField>