knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__CRUSH_Settings_Obj__c/fields/pqcrush__Relationship_Map_Default_Fields__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Relationship_Map_Default_Fields__c</fullName>
    <defaultValue>&quot;Contact.Name.Required,Contact.Title,Contact.Email,Relationship_Map_Member__c.Influence__c.Required,Relationship_Map_Member__c.Support__c.Required&quot;</defaultValue>
    <description>Determines the default fields for the Relationship Map display</description>
    <label>Relationship Map Default Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>