knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__CRUSH_Settings_Obj__c/fields/pqcrush__Score_High_Color__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Score_High_Color__c</fullName>
    <description>The RGB color when the score is high (in format #aabbcc)</description>
    <inlineHelpText>The RGB color when the score is high (in format #aabbcc)</inlineHelpText>
    <label>Score High Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>