knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__CRUSH_Settings_Obj__c/fields/pqcrush__Support_Colors__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Support_Colors__c</fullName>
    <defaultValue>&quot;Blocker:#FF0000;Supporter:#FFC741;Floater:#E5E1E6;Champion:#97D700;&quot;</defaultValue>
    <label>Support Colors (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>