knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__CRUSH_Settings_Obj__c/fields/pqcrush__SWOT_Analysis_Updated__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__SWOT_Analysis_Updated__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SWOT Analysis Updated</label>
    <type>Checkbox</type>
</CustomField>