knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__CRUSH_Settings_Obj__c/fields/pqcrush__Task_Objects_Related_To_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Task_Objects_Related_To_Account_Plan__c</fullName>
    <label>Task Objects Related To Account Plan</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>