knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__CRUSH_Settings_Obj__c/fields/pqcrush__Team_Member_Added_Removed__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Team_Member_Added_Removed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Team Member Added/Removed</label>
    <type>Checkbox</type>
</CustomField>