knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__CRUSH_Settings_Obj__c/fields/pqcrush__User__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Determines the user these settings are for in the case of user level settings</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CRUSH_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>